# gmail-api-example-python

./: .gitignore  README.md  pyproject.toml
src/: googleauth_util.py  template.py
src/gmail_api_example_python/: example-intro.py
src/gmail_api_example_python/intro/: example-intro1.py  example-intro2.py  example2.py  mimetype_toukei.py
src/gmail_api_example_python/read_attachment/: example1.py
src/gmail_api_example_python/search/: get_label.py  get_messages_by_label.py  get_messages_by_query.py
