[project]
name = "gmail-api-example-python"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hrsano645", email = "hrs.sano645@gmail.com" }
]
dependencies = [
    "google-api-python-client>=2.114.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
